--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "concurrently \"npm run start-frontend\" \"npm run start-backend\"",
-    "start-frontend": "npm start --prefix Frontend/frontend",
+    "start-frontend": "npm start --prefix Frontend",
     "start-backend": "node Backend/index.js"
   },
   "keywords": [],
